--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -58,10 +58,10 @@
                     <div class="language-dropdown">
                         <p>Language</p>
                         <div class="language-dropdown-content">
-                            <a href="">English</a>
-                            <a href="">Dansk</a>
-                            <a href="">Deutsch</a>
-                            <a href="">Français</a>
+                            <a asp-controller="Home" asp-action="SetLanguage" asp-route-culture="en">English</a>
+                            <a asp-controller="Home" asp-action="SetLanguage" asp-route-culture="da">Dansk</a>
+                            <a asp-controller="Home" asp-action="SetLanguage" asp-route-culture="de">Deutsch</a>
+                            <a asp-controller="Home" asp-action="SetLanguage" asp-route-culture="fr">Français</a>
                         </div>
                     </div>
                 </li>
