--- a/NaturePlanetSolutionCore/Views/User/ProfilePage.cshtml
+++ b/NaturePlanetSolutionCore/Views/User/ProfilePage.cshtml
@@ -18,6 +18,7 @@
             <form asp-controller="User" asp-action="UserList" method="get">
                 <button type="submit" class="btn btn-primary">View All Users</button>
             </form>
+            <a href="/Products/CreateProduct">Create new Product</a>
         }
     </div>
 </div>
