--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/css/cart.css"/>
     <link rel="stylesheet" href="~/css/orderhistory.css" />
 </head>
-<body>
+<body style="display: flex; flex-direction: column; min-height: 100vh;">
 <header>
     <div class="header-top">
         <div class="logo-container">
@@ -82,13 +82,13 @@
     </nav>
 </header>
 
-<div class="container">
+<div class="container flex-grow-1">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
+<footer class="border-top footer text-muted mt-auto">
     <div class="container">
         &copy; 2025 - NaturePlanetSolutionCore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
