--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml.css
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml.css
@@ -40,11 +40,12 @@ button.accept-policy {
 }
 
 .footer {
-  position: absolute;
+  position:fixed;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+    padding-top: 100%;
 }
 
 .language-dropdown-container {
