--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/NaturePlanetSolutionCore.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/cart.css"/>
     <link rel="stylesheet" href="~/css/orderhistory.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="display: flex; flex-direction: column; min-height: 100vh;">
 <header>
@@ -98,6 +99,7 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/cart.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
