--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/NaturePlanetSolutionCore.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/cart.css"/>
+    <link rel="stylesheet" href="~/css/checkout.css"/>
     <link rel="stylesheet" href="~/css/orderhistory.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
