--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/cart.css"/>
     <link rel="stylesheet" href="~/css/checkout.css"/>
     <link rel="stylesheet" href="~/css/orderhistory.css" />
+    <link rel="stylesheet" href="~/css/product.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="display: flex; flex-direction: column; min-height: 100vh;">
