--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                             {
                                 <a asp-controller="User" asp-action="Profile">Profile</a>
                                 <a asp-controller="User" asp-action="ViewOrders">Order History</a>
+                                <a asp-controller="User" asp-action="GetUserRecommendations">My recommended products</a>
                                 <a asp-controller="User" asp-action="Logout">Logout</a>
                             }
                             else
